# vitalrisk-api

./: .gitignore  ONE_PAGER.md  README.md  requirements.txt  run-dev.ps1  run-dev.ps1.txt
Downloads/vitalrisk-api-starter/vitalrisk-api/: Dockerfile  risk_api.postman_collection.json
Downloads/vitalrisk-api-starter/vitalrisk-api/app/: main.py  model.py
Downloads/vitalrisk-api-starter/vitalrisk-api/frontend/: index.html
Downloads/vitalrisk-api-starter/vitalrisk-api/tests/: test_api.py
ai-content-gen/masterpiece/leadrescue/: LICENSE  README.md  docker-compose.yml
ai-content-gen/masterpiece/leadrescue/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
ai-content-gen/masterpiece/leadrescue/backend/app/: ai_assist.py  db.py  main.py  models.py  schemas.py  twilio_service.py
ai-content-gen/masterpiece/leadrescue/backend/scripts/: seed.py
ai-content-gen/masterpiece/leadrescue/frontend/: README.md  package.json
ai-content-gen/masterpiece/leadrescue/frontend/pages/: index.js
ai-content-gen/masterpiece/leadrescue/marketing/: email_templates.md  landing.md  sms_followups.md  testimonials.md
app/: schemas.py
